force-app/main/default/objects/ApigeeAuthProvider__mdt/fields/ClientCert__c.field-meta.xml
<CustomField>
    <fullName>ClientCert__c</fullName>
    <description>Client Certificate</description>
    <label>Client Cert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>