force-app/main/default/objects/ApigeeAuthProvider__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Client Id</description>
    <label>ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>