force-app/main/default/objects/ApigeeAuthProvider__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <description>Content-type</description>
    <label>ContentType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>