force-app/main/default/objects/ApigeeAuthProvider__mdt/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>Resource to get the access token</description>
    <label>Resource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>